added idea project